// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackgroundImage /> with mock IO should call critical fixed images 1`] = `
<div>
  <div
    class="fixedImage gatsby-background-image-test gatsby-image-wrapper"
    style="position: relative; overflow: hidden; display: inline; width: 100px; height: 100px; opacity: 0.99; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .fixedImage.:before,
.gatsby-background-image-test:before,
          .fixedImage.:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            transition-delay: 500ms;
            transition: opacity 0.5s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .fixedImage.:before,
.gatsby-background-image-test:before {
            z-index: -100;
            background-image: url(string_of_base64);
            
            background-color: lightgray;
            opacity: 0; 
          }
          .fixedImage.:after,
.gatsby-background-image-test:after {
            z-index: -101;
            
            background-image: url(test_fixed_image.jpg);
            background-color: lightgray;
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" /&gt;&lt;img width="100" height="100" srcset="some srcSet" src="test_fixed_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> with mock IO should render visible fixed image 1`] = `
<div>
  <div
    class="gatsby-background-image-fwatluf_depr gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; background-position: center; background-repeat: no-repeat; background-size: cover;"
    title=""
  >
    <style>
      
          .gatsby-background-image-fwatluf_depr:before,
          .gatsby-background-image-fwatluf_depr:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            transition-delay: 0.25s;
            transition: opacity 0.5s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gatsby-background-image-fwatluf_depr:before {
            z-index: -100;
            
            
            
            opacity: 1; 
          }
          .gatsby-background-image-fwatluf_depr:after {
            z-index: -101;
            
            
            
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;img src="" alt="" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
  </div>
</div>
`;

exports[`<BackgroundImage /> with mock IO should render visible fixed image 2`] = `undefined`;

exports[`<BackgroundImage /> with mock IO should render visible fluid image 1`] = `
<div>
  <div
    class="gatsby-background-image-fwatluf_depr gatsby-image-wrapper"
    style="position: relative; overflow: hidden; display: inline-block; width: 100px; height: 100px; opacity: 0.99; background-position: center; background-repeat: no-repeat; background-size: cover;"
    title=""
  >
    <style>
      
          .gatsby-background-image-fwatluf_depr:before,
          .gatsby-background-image-fwatluf_depr:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            transition-delay: 0.25s;
            transition: opacity 0.5s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gatsby-background-image-fwatluf_depr:before {
            z-index: -100;
            background-image: url(string_of_base64);
            
            
            opacity: 0; 
          }
          .gatsby-background-image-fwatluf_depr:after {
            z-index: -101;
            
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" /&gt;&lt;img width="100" height="100" srcset="some srcSet" src="test_fixed_image.jpg" alt="" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
  </div>
</div>
`;

exports[`<BackgroundImage /> with mock IO should render visible fluid image 2`] = `undefined`;

exports[`<BackgroundImage /> without IO should call onLoadFunction without IO 1`] = `
<div>
  <div
    class="fixedImage testgatsby-background-image-test gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; display: inline; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .fixedImage.test:before,
.gatsby-background-image-test:before,
          .fixedImage.test:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            transition-delay: 0.25s;
            transition: opacity 0.5s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .fixedImage.test:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            background-color: lightgray;
            opacity: 1; 
          }
          .fixedImage.test:after,
.gatsby-background-image-test:after {
            z-index: -101;
            
            
            background-color: lightgray;
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img sizes="(max-width: 600px) 100vw, 600px" srcset="some srcSet" src="test_fluid_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;
